<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>epam</groupId>
  <artifactId>task1</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <dependencies>
  
   <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.9.9</version>
    </dependency>
  
    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derby</artifactId>
      <version>10.12.1.1</version>
    </dependency>
    
  </dependencies>
  
  
  
  
  <name>JavaHometaskTask1</name>
  <properties>
    <java.version>1.7</java.version>
    <maven.compiler.version>3.3</maven.compiler.version>
    <maven.surefire.version>2.18.1</maven.surefire.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgument>-Werror</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.version}</version>
        <executions>
          <execution>
            <id>default-test</id>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <reportsDirectory>reports</reportsDirectory>
              <forkCount>2</forkCount>
              <reuseForks>false</reuseForks>
              <argLine>-Duser.language=en</argLine>
              <argLine>-Xmx1024m</argLine>
              <argLine>-XX:MaxPermSize=256m</argLine>
              <argLine>-Dfile.encoding=UTF-8</argLine>
              <useFile>false</useFile>
              <suiteXmlFiles>
                <suiteXmlFile>src/test/resources/suites.xml</suiteXmlFile>
              </suiteXmlFiles>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>